--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+ <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>LOUD Agency</title>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  </head>
+  <body>
+  
+  <script src="scripts.js"></script>
+  </body>
+</html>
