Initial nav bar outline

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
  <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://kit.fontawesome.com/cf011bc379.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>LOUD Agency</title>
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
   <body>
-  
+    <nav class="navbar evenlyspaced">
+      <a class="active notextdec" href=#home >Home (Logo) </a>
+      <!-- all of these should be hidden -->
+      <div id="nav-links">
+        <a href=#about-us class="notextdec">About Us</a>
+        <a href=#contact class="notextdec">Contact</a> 
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()"><i class="fas fa-bars"></i></a>
+    </nav>
   <script src="scripts.js"></script>
   </body>
 </html>
