--- a/about-us.html
+++ b/about-us.html
@@ -10,6 +10,18 @@
 
   <body>
   
+    <nav class="navbar evenlyspaced"> 
+      <a class="active notextdec" href=#home >Home (Logo) </a>       
+      <!-- all of these should be hidden -->       
+      <div id="nav-links">         
+        <a href=#about-us class="notextdec">About Us</a>         
+        <a href=#contact class="notextdec">Contact</a>        
+      </div>       
+      <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
+        <i class="fas fa-bars"></i>
+      </a>     
+    </nav>   
+
     <section class="aboutus">
       <p>An agency with a difference: LOUD is hear to make some noise!</p>
   
@@ -34,7 +46,7 @@
           <div class="slide">
           <img src="" alt="">
           </div>
-          
+
         </div>
       </div>
     </section>
