added logo into index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
   
     <nav class="navbar evenlyspaced"> 
-      <a class="active notextdec" href=#home >Home (Logo) </a>       
+      <a class="active notextdec" href=#home >Home <img src="images/LOUD-logo.png" alt="logo" width="50"> </a>       
       <!-- all of these should be hidden -->       
       <div id="nav-links">         
         <a href=#about-us class="notextdec">About Us</a>         
@@ -23,6 +23,7 @@
     </nav>   
 
     <section class="aboutus">
+      <img src="images/LOUD-logo.png" alt="logo">
       <p>An agency with a difference: LOUD is hear to make some noise!</p>
   
       <div class="img-carousel-container">
