Add CSS styling to About Us section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     </nav>   
 
     <section class="aboutus">
+      <div class="about-us-container">
+        <div class="staff-info">
+          <div class="staff-name"></div>
+          <div class="staff-blurb"></div>
+        <img class="staff-image">
+        </div>
+       
+      </div>
       <img src="images/LOUD-logo.png" alt="logo">
       <p>An agency with a difference: LOUD is hear to make some noise!</p>
   
