add colors to css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
   
     <nav class="navbar evenlyspaced"> 
-      <a class="active notextdec" href=#home >Home <img src="images/LOUD-logo.png" alt="logo" width="50"> </a>       
-      <!-- all of these should be hidden -->       
+      <a class="active notextdec" href=#home ><img src="images/LOUD-logo.png" alt="Loud logo" width="50"></a>       
+      <!-- all of these should be hidden in mobile version -->       
       <div id="nav-links">         
         <a href=#about-us class="notextdec">About Us</a>         
         <a href=#contact class="notextdec">Contact</a>        
