add styles to navbar

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <body>
   
     <nav class="navbar evenlyspaced"> 
-      <a class="active notextdec" href=#home ><img src="images/LOUD-logo.png" alt="Loud logo" width="50"></a>       
+      <a class="active logo notextdec" href=#home ><img src="images/LOUD-logo.png" alt="Loud logo" width="50"></a>       
       <!-- all of these should be hidden in mobile version -->       
       <div id="nav-links">         
         <a href=#about-us class="notextdec">About Us</a>         
-        <a href=#contact class="notextdec">Contact</a>        
+        <a href=#contact class="notextdec ">Contact</a>        
       </div>       
-      <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
+      <a href="javascript:void(0);" id="hamburger-menu" class="icon" onclick="hamburgerMenu()">
         <i class="fas fa-bars"></i>
       </a>     
     </nav>   
