--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </a>     
     </nav>   
 
+
     <section class="aboutus">
      
       <img src="images/LOUD-logo.png" alt="logo">
@@ -83,6 +84,48 @@
        
       </div>
 
+    </section>
+
+<section class="formsection">
+      <form
+      id="form"
+    >
+      <label for="name">Name</label>
+      <input id="name" name="name" type="text" required/>
+
+      <label for="name">Company Name</label>
+      <input id="coname" name="coname" type="text" required/>
+
+      <label for="email">Email</label>
+      <input id="email" name="email" type="email" required/>
+
+      <label for="tel">Telephone</label>
+      <input id="tel" name="tel" type="tel" />
+
+      <fieldset>
+        <legend>Preferred contact method</legend>
+
+        <input
+          id="contact-email"
+          type="radio"
+          name="contact"
+          value="email"
+          checked
+        />
+        <label for="contact-email" class="radio">Email</label>
+
+        <input id="contact-tel" type="radio" name="contact" value="telephone" />
+        <label for="contact-tel" class="radio">Telephone</label>
+      </fieldset>
+
+      <label for="message">Comments:</label>
+      <textarea name="message"></textarea>
+
+      <input id="marketingConsent" name="marketingConsent" type="checkbox" />
+      <label for="marketingConsent" class="checkbox">Just wreck my inbox</label>
+
+      <button type="submit">Submit</button>
+    </form>
     </section>
 
   <script src="script.js"></script>
