add alt to images

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
   
     <nav class="navbar evenlyspaced"> 
-      <a class="active logo notextdec" href=#home ><img src="images/LOUD-logo.png" alt="Loud logo" width="50"></a>       
+      <a class="active logo notextdec" href=#home ><img src="images/LOUD-logo.png" alt="Loud company logo" width="50"></a>       
       <!-- all of these should be hidden in mobile version -->       
       <div id="nav-links">         
-        <a href=#about-us class="notextdec">About Us</a>         
-        <a href=#contact class="notextdec ">Contact</a>        
+        <a href=#about-us class="notextdec" alt="About Us link">About Us</a>         
+        <a href=#contact class="notextdec"alt="Contact link" >Contact</a>        
       </div>       
       <a href="javascript:void(0);" id="hamburger-menu" class="icon" onclick="hamburgerMenu()">
         <i class="fas fa-bars"></i>
@@ -26,7 +26,7 @@
 
     <section class="aboutus">
      
-      <img src="images/LOUD-logo.png" alt="logo">
+      <img src="images/LOUD-logo.png" alt="loud company logo">
       <p>An agency with a difference: LOUD is hear to make some noise!</p>
   
       <div class="about-us-container">
