connect menu links to about home contact

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
   
     <nav class="navbar evenlyspaced"> 
-      <a class="active logo notextdec" href=#home ><img src="images/LOUD-logo.png" alt="Loud company logo" width="50"></a>       
+      <a class="active logo notextdec" href=#home ><img src="images/LOUD-logo.png" alt="Loud company logo, a round blue circle, inside is written we are loud in red font" width="50"></a>       
       <!-- all of these should be hidden in mobile version -->       
       <div id="nav-links">       
-        <a href=#about-us class="notextdec" alt="About Us link">About Us</a>         
+        <a href=#aboutus class="notextdec" alt="About Us link">About Us</a>         
         <a href=#contact class="notextdec"alt="Contact link" >Contact</a>        
       </div>       
       <a href="javascript:void(0);" id="hamburger-menu" class="icon" onclick="hamburgerMenu()">
@@ -23,11 +23,9 @@
       </a>     
     </nav>   
 
+    <section id="aboutus">
 
-    <section class="aboutus">
-     
-
-      <img src="images/LOUD-logo.png" alt="loud company logo">
+      <img src="images/LOUD-logo.png" id="home" alt="Loud company logo, a round blue circle, inside is written we are loud in red font">
 
 
       <p>An agency with a difference: LOUD is hear to make some noise!</p>
@@ -93,7 +91,7 @@
 
     </section>
 
-<section class="formsection">
+<section id="contact" class="formsection">
       <form
       id="form"
     >
