add alt to images and a links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href=#aboutus class="notextdec" alt="About Us link">About Us</a>         
         <a href=#contact class="notextdec"alt="Contact link" >Contact</a>        
       </div>       
-      <a href="javascript:void(0);" id="hamburger-menu" class="icon" onclick="hamburgerMenu()">
+      <a href="javascript:void(0);" id="hamburger-menu"  alt="mobile menu" class="icon" onclick="hamburgerMenu()">
         <i class="fas fa-bars"></i>
       </a>     
     </nav>   
@@ -36,7 +36,7 @@
             <h2>Michael Devlin</h2>
           </div>
   <div class="staff-image-container">
-          <img src="images/meowth.png" class="staff-image">
+          <img src="images/meowth.png" class="staff-image" alt="a picture of the pokemon character meowth " >
   </div>
           <div class="staff-blurb">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -49,7 +49,7 @@
             <h2>Amy <br>Kuner</h2>
           </div>
   <div class="staff-image-container">
-          <img src="images/jigglypuff.png" class="staff-image">
+          <img src="images/jigglypuff.png" class="staff-image" alt="a picture of the pokemon character bulbasaur">
   </div>
           <div class="staff-blurb">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -62,7 +62,7 @@
             <h2>Craig <br>MacLeod</h2>
           </div>
   <div class="staff-image-container">
-          <img src="images/bulbasaur.png" class="staff-image">
+          <img src="images/bulbasaur.png" class="staff-image" alt="a picture of the pokemon character bulbasaur ">
   </div>
           <div class="staff-blurb">
 <p>Yo, my name's Craig and I'm here to say<br>
@@ -79,7 +79,7 @@
             <h2>Safia <br>Ali</h2>
           </div>
   <div class="staff-image-container">
-          <img src="images/pikachu.png" class="staff-image">
+          <img src="images/pikachu.png" class="staff-image" alt="a picture of the pokemon character pikachu">
   </div>
           <div class="staff-blurb">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -123,8 +123,8 @@
         <label for="contact-tel" class="radio">Telephone</label>
       </fieldset>
 
-      <label for="message">Comments:</label>
-      <textarea name="message"></textarea>
+      <label for="comments">Comments:</label>
+      <textarea name="comments"id="comments"></textarea>
 
       <input id="marketingConsent" name="marketingConsent" type="checkbox" />
       <label for="marketingConsent" class="checkbox">Just wreck my inbox</label>
