add breaks to css form

--- a/index.html
+++ b/index.html
@@ -93,25 +93,28 @@
       <form
       id="form" class="sixtych"
     >
-      <label for="name">Name</label>
+      <label for="name">Name:</label>
+    </br>
       <input id="name" name="name" type="text" required/>
 </br>
 
-      <label for="coname">Company Name</label>
+      <label for="coname">Company Name:</label>
+    </br>
       <input id="coname" name="coname" type="text" required/>
 </br>
 
-      <label for="email">Email</label>
+      <label for="email">Email:</label>
+    </br>
       <input id="email" name="email" type="email" required/>
 </br>
 
-      <label for="tel">Telephone</label>
+      <label for="tel">Telephone:</label>
+    </br>
       <input id="tel" name="tel" type="tel" />
 </br>
 
       <fieldset>
-        <legend>Preferred contact method</legend>
-
+        <legend>Preferred contact method:</legend>
         <input
           id="contact-email"
           type="radio"
@@ -120,18 +123,18 @@
           checked
         />
         <label for="contact-email" class="radio">Email</label>
-      </br>
 
         <input id="contact-tel" type="radio" name="contact" value="telephone" />
         <label for="contact-tel" class="radio">Telephone</label>
       </fieldset>
 
       <label for="message">Comments:</label>
+    </br>
       <textarea name="message"></textarea>
-
+  </br>
       <input id="marketingConsent" name="marketingConsent" type="checkbox" />
       <label for="marketingConsent" class="checkbox">Just wreck my inbox</label>
-
+  </br>
       <button type="submit">Submit</button>
     </form>
     </section>
