--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      
       <img src="images/LOUD-logo.png" alt="logo" class="main-logo">
       <p>An agency with a difference: <br>
-        <span style="font-size: 3.5rem;">LOUD </span> <span style="font-size: 2.2rem;">is hear to make some noise!</span></p>
+        <span style="font-size: 3rem; font-family: 'Fascinate', cursive;">¡LOUD! </span> <span style="font-size: 2.2rem;">is hear to make some noise!</span></p>
   
       <div class="about-us-container">
         <div class="staff-info">
