fixed merge conflicts

--- a/index.html
+++ b/index.html
@@ -93,11 +93,8 @@
 
     </section>
 
-<<<<<<< HEAD
-<section id="contact" class="formsection">
-=======
-<section class="formsection flexcenter">
->>>>>>> main
+<section id="contact" class="formsection flexcenter">
+
       <form
       id="form" class="sixtych"
     >
@@ -136,16 +133,11 @@
         <label for="contact-tel" class="radio">Telephone</label>
       </fieldset>
 
-<<<<<<< HEAD
       <label for="comments">Comments:</label>
-      <textarea name="comments"id="comments"></textarea>
-
-=======
-      <label for="message">Comments:</label>
     </br>
-      <textarea name="message"></textarea>
-  </br>
->>>>>>> main
+      <textarea name="comments"id="comments"></textarea>
+    </br>
+
       <input id="marketingConsent" name="marketingConsent" type="checkbox" />
       <label for="marketingConsent" class="checkbox">Just wreck my inbox</label>
   </br>
