--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
       </a>     
     </nav>   
 
-    <section class="aboutus">
+    <section id="aboutus">
      
-      <img src="images/LOUD-logo.png" alt="Loud company logo, a round blue circle, inside is written we are loud in red font"" class="main-logo">
+      <img src="images/LOUD-logo.png" alt="Loud company logo, a round blue circle, inside is written we are loud in red font" class="main-logo">
       <p>An agency with a difference: <br>
-        <span style="font-size: 3rem; font-family: 'Fascinate', cursive;">¡LOUD! </span> <span style="font-size: 2.2rem;">is hear to make some noise!</span></p>
+        <span style="font-size: 3rem; font-family: 'Fascinate', cursive;">¡LOUD! </span> 
+        <span style="font-size: 2.2rem;">is hear to make some noise!</span>
+      </p>
 
   
       <div class="about-us-container">
