--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img src="images/meowth.png" class="staff-image" alt="a picture of the pokemon character meowth " >
   </div>
           <div class="staff-blurb">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<p>Hi there. I'm Michael. A lot of people tell me I look like the Pok'emon character Meowth. But the truth is that I'm not, in fact, Meowth. Feel free to contact me-ow.</p>
 
           </div>
         </div>
@@ -56,7 +56,7 @@
           <img src="images/jigglypuff.png" class="staff-image" alt="a picture of the pokemon character bulbasaur">
   </div>
           <div class="staff-blurb">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<p>I'm Amy aka Jigglypuff. I'm an ENFP with attitude. I'm a sustainability expert and I own a mattress made from all recycled materials.</p>
 
           </div>
         </div>
@@ -86,7 +86,7 @@
           <img src="images/pikachu.png" class="staff-image" alt="a picture of the pokemon character pikachu">
   </div>
           <div class="staff-blurb">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<p>I'm Safia Ali and I'm da real MC. Up in Git Terminal is where I be. I don't get stuck in Vim – Vim gets stuck in me, and it's all because I'm da realest MC.</p>
 
           </div>
         </div>
