add styling to submit button and nav  bar

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <input id="marketingConsent" name="marketingConsent" type="checkbox" />
       <label for="marketingConsent" class="checkbox">Just wreck my inbox</label>
   </br>
-      <button type="submit">Submit</button>
+      <button class="submit-btn" type="submit">Submit</button>
     </form>
     </section>
 
