ADD footer and styling

--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@
       <button class="submit-btn" type="submit">Submit</button>
     </form>
     </section>
-
+    <footer>
+      <div class="copyright">
+        <hr>
+        <p>Copyright © 2021 we are !Loud! All Rights Reserved. </p>
+      </div>
+    </footer>
   <script src="script.js"></script>
   </body>
 </html>
