Change all id styles to css

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <nav class="navbar evenlyspaced"> 
       <a class="active logo notextdec" href=#home ><img src="images/LOUD-logo.png" alt="Loud company logo, a round blue circle, inside is written we are loud in red font" width="50"></a>       
       <!-- all of these should be hidden in mobile version -->       
-      <div id="nav-links">       
+      <div id="nav-links" class="nav-linksclass">       
         <a href=#aboutus class="notextdec" alt="About Us link">About Us</a>         
         <a href=#contact class="notextdec"alt="Contact link" >Contact</a>        
       </div>       
-      <a href="javascript:void(0);" id="hamburger-menu"  alt="mobile menu" class="icon" onclick="hamburgerMenu()">
+      <a href="javascript:void(0);" id="hamburger-menu" class="hamburger" alt="mobile menu" class="icon" onclick="hamburgerMenu()">
         <i class="fas fa-bars"></i>
       </a>     
     </nav>   
 
-    <section id="aboutus">
+    <section id="aboutus" class="aboutusclass">
      
       <img src="images/LOUD-logo.png" alt="Loud company logo, a round blue circle, inside is written we are loud in red font" class="main-logo">
       <p>An agency with a difference: <br>
@@ -34,7 +34,7 @@
       </p>
 
   
-      <div class="about-us-container">
+      <div class="about-us-container flexcenter">
         <div class="staff-info">
           <div class="staff-name">
             <h2>Michael Devlin</h2>
