changed divs to sections where appropriate

--- a/index.html
+++ b/index.html
@@ -35,63 +35,63 @@
       </p>
   
       <div class="about-us-container">
-        <div class="staff-info">
+        <section class="staff-info">
           <div class="staff-name">
             <h2>Michael Devlin</h2>
           </div>
   <div class="staff-image-container">
           <img src="images/meowth.png" class="staff-image" alt="a picture of the pokemon character meowth " >
   </div>
-          <div class="staff-blurb">
+          <section class="staff-blurb">
 <p>Hi there. I'm Michael. A lot of people tell me I look like the Pok'emon character Meowth. But the truth is that I'm not, in fact, Meowth. Feel free to contact me-ow.</p>
 
-          </div>
-        </div>
+          </section>>
+        </section>
 
-        <div class="staff-info">
+        <section class="staff-info">
           <div class="staff-name">
             <h2>Amy <br>Kuner</h2>
           </div>
   <div class="staff-image-container">
           <img src="images/jigglypuff.png" class="staff-image" alt="a picture of the pokemon character bulbasaur">
   </div>
-          <div class="staff-blurb">
+          <section class="staff-blurb">
 <p>I'm Amy aka Jigglypuff. I'm an ENFP with attitude. I'm a sustainability expert and I own a mattress made from all recycled materials.</p>
 
-          </div>
-        </div>
+          </section>
+        </section>
 
-        <div class="staff-info">
+        <section class="staff-info">
           <div class="staff-name">
             <h2>Craig <br>MacLeod</h2>
           </div>
   <div class="staff-image-container">
           <img src="images/bulbasaur.png" class="staff-image" alt="a picture of the pokemon character bulbasaur ">
   </div>
-          <div class="staff-blurb">
+          <section class="staff-blurb">
 <p>Yo, my name's Craig and I'm here to say<br>
   I'm reppin' FAC in a major way<br>
   We got Safia, Amy, and Michael too<br>
   So if you wanna get it done you better ask team 2
 </p>
+          </section>
 
-          </div>
-        </div>
+        </section>
 
-        <div class="staff-info">
+        <section class="staff-info">
           <div class="staff-name">
             <h2>Safia <br>Ali</h2>
           </div>
   <div class="staff-image-container">
           <img src="images/pikachu.png" class="staff-image" alt="a picture of the pokemon character pikachu">
   </div>
-          <div class="staff-blurb">
+          <section class="staff-blurb">
 <p>I'm Safia Ali and I'm da real MC. Up in Git Terminal is where I be. I don't get stuck in Vim – Vim gets stuck in me, and it's all because I'm da realest MC.</p>
 
-          </div>
+          </section>
         </div>
        
-      </div>
+    </section>
 
     </section>
 
