Fix merge errors and naming conventions

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   <body>
   
-    <nav class="navbar evenlyspaced"> 
+    <nav class="nav-bar evenlyspaced"> 
       <a class="active logo notextdec" href=#home ><img src="images/LOUD-logo.png" alt="Loud company logo, a round blue circle, inside is written we are loud in red font" width="50"></a>       
       <!-- all of these should be hidden in mobile version -->       
       <div id="nav-links" class="nav-linksclass">       
-        <a href=#aboutus class="notextdec" alt="About Us link">About Us</a>         
+        <a href=#about-us class="notextdec" alt="About Us link">About Us</a>         
         <a href=#contact class="notextdec"alt="Contact link" >Contact</a>        
       </div>       
       <a href="javascript:void(0);" id="hamburger-menu" class="hamburger" alt="mobile menu" class="icon" onclick="hamburgerMenu()">
@@ -25,7 +25,7 @@
       </a>     
     </nav>   
 
-    <section id="aboutus" class="aboutusclass">
+    <section id="about-us" class="about-us-class">
      
       <img src="images/LOUD-logo.png" alt="Loud company logo, a round blue circle, inside is written we are loud in red font" class="main-logo">
       <p>An agency with a difference: <br>
@@ -34,13 +34,8 @@
         <span class="font-md">is hear to make some noise!</span>
       </p>
   
-<<<<<<< HEAD
       <div class="about-us-container flexcenter">
-        <div class="staff-info">
-=======
-      <div class="about-us-container">
         <section class="staff-info">
->>>>>>> main
           <div class="staff-name">
             <h2>Michael Devlin</h2>
           </div>
