finished styling contact form

--- a/index.html
+++ b/index.html
@@ -102,25 +102,25 @@
     >
       <label for="name">Name:</label>
     </br>
-      <input id="name" name="name" type="text" required/>
+      <input class="contact-form-input" id="name" name="name" type="text" required/>
 </br>
 
       <label for="coname">Company Name:</label>
     </br>
-      <input id="coname" name="coname" type="text" required/>
+      <input class="contact-form-input" id="coname" name="coname" type="text" required/>
 </br>
 
       <label for="email">Email:</label>
     </br>
-      <input id="email" name="email" type="email" required/>
+      <input class="contact-form-input" id="email" name="email" type="email" required/>
 </br>
 
       <label for="tel">Telephone:</label>
     </br>
-      <input id="tel" name="tel" type="tel" />
+      <input class="contact-form-input" id="tel" name="tel" type="tel" />
 </br>
 
-      <fieldset>
+      <fieldset class="contact-form-input contact-method">
         <legend>Preferred contact method:</legend>
         <input
           id="contact-email"
@@ -137,7 +137,7 @@
 
       <label for="comments">Comments:</label>
     </br>
-      <textarea name="comments"id="comments"></textarea>
+      <textarea class="contact-form-input" name="comments"id="comments"></textarea>
     </br>
 
       <input id="marketingConsent" name="marketingConsent" type="checkbox" />
